--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,11 @@ defaults:
     values:
       image: true
 
-title: Minimalism
-name: minimalism
-description: Minimalism is a jekyll theme for minimalist
+title: Jieshao
+name: Jieshao Space
+description: 鞭策我不断前进的是恐惧
 
-github: https://github.com/showzeng/Minimalism
+github: https://github.com/LY1806620741
 rss: true
 
 plugins:
